<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:layout_marginTop="10sp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/SelView2"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/provinsi"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/Province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/SelViiew3"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/kota"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/Kota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/SelViiew4"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/kecamatan"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/Kecamatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/SelViiew5"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/kelurahan"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/Kelurahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Text5"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/rw"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/IptRw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="01"
            android:inputType="number"
            android:text="01"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Text6"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/rt"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/IptRt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="01"
            android:inputType="number"
            android:text="01"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Text7"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_kk"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/IptKk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="01"
            android:inputType="number"
            android:text="01"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Text8"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_penduduk" />

        <EditText
            android:id="@+id/IptPnd"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="01"
            android:inputType="number"
            android:text="01"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/BtnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>